--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body {
 }.circle-right {
     right: 0;
 }.bottom-content {
-    width: 80%; /* Adjusted width */
+    max-width: 700px;
     margin-bottom: 40px; /* Adjusted margin */
     text-align: center;
 }
@@ -114,8 +114,8 @@ body {
 }
 
 .text-content p {
-    line-height: 1.6;
-    margin-bottom: 30px; /* Adjusted margin */
+    line-height: normal;
+    margin-bottom: 40px; /* Adjusted margin */
     color: #F4FF57; /* Updated text color */
 }
 
