--- a/style.css
+++ b/style.css
@@ -66,14 +66,19 @@ body {
     display: block;
     max-width: 100%;
     height: auto;
-}.yellow-line-container {
+}
+.yellow-line-container {
     width: 100%;
-    display: flex;
+    display: flex
+;
     justify-content: center;
     align-items: center;
-    margin: 20px 0; /* Adjusted margin */
-    position: relative; /* To position the circles */
-}.yellow-line {
+    bottom: 50%;
+    top: 50%;
+    /* margin: 20px 0; */
+    position: absolute;
+}
+.yellow-line {
     width: 100%;
     height: 44px;
     background-color: #F4FF57;
